--- a/prueba.html
+++ b/prueba.html
@@ -1,58 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <title>Turismo Córdoba</title>
+        <title>Javier Salazar</title>
         <meta charset="utf-8">
-        <meta name="description" content="Cordoba ciudad de patrimonio">
-        <meta name="keywords" content="Turismo, patrimonio, viajes">
         <!--link rel="stylesheet" href="estilos.css"-->
     </head>
     <body>
-        <header>
-            <h1>Córdoba Ciudad de patrimonio</h1>
-        </header>
-        <nav>
-            <ul type = "a">
-                <li><a href="index.html">Inicio</a></li> 
-                <li><a href="mezquita.html">La Mezquita</a></li> 
-                <li><a href="cascohistorico.html">Casco Histórico</a></li>
-                <li><a href="patios.html">Los Patios</a></li>
-                <li><a href="medinaazhara.html">Medina Azahara</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-        <main>
-            <section>
-                <article>
-                <h2>
-                    Noticia 1
-                </h2>
-                <p>
-                    <cite>Lorem ipsum dolor sit amet,</cite> consectetur adipiscing elit. Donec tempor egestas venenatis. Curabitur a magna eros. Sed dapibus feugiat
-                    lorem, quis ullamcorper mi pulvinar vitae. Sed egestas metus nulla. In ac tortor lobortis, sodales magna id, ultrices orci. 
-                    Nunc sed felis diam. turpis mauris, bibendum quis interdum at, iaculis ut lectus. In sed nulla blandit nisl euismod dignissim. 
-                    Vivamus aliquet maximus eros, in pulvinar nunc rhoncus eu. Donec elit libero, ultricies id tristique nec, interdum sit amet neque. Mauris 
-                    eu purus in est condimentum congue.
-                </p>
-                <p> 
-                    Ut eleifend nulla lorem, ac vulputate risus pharetra at. Ut at suscipit tellus, faucibus hendrerit erat. Proin vel consectetur felis. Pellentesque 
-                    eu efficitur libero, non porttitor enim. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus ut mi nibh.
-                     Morbi posuere velit quis quam tincidunt, a consectetur ligula posuere. Vivamus cursus, eros a pretium aliquam, risus arcu dictum ipsum, 
-                    id mollis felis turpis in eros. Nam finibus lorem in elit viverra, vel consectetur lorem tempus. Etiam sagittis dolor porttitor sem iaculis lobortis. 
-                    Donec ut suscipit metus.
-                </p>
-                </article>
-                <article>
-                    Contenido noticia 2
-                </article>
-            </section>
-            <aside>
-                <a href="documentos/planoA4.pdf" download="plano">Mapa de la ciudad</a>
-            </aside>
-        </main>
-        <footer>
-            <address>Córdoba Spain</address>
-           &copy; Todos los derechos ...
-        </footer>
+        <a href="index.html">lm</a>
     </body>
 </html>
