--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <!--link rel="stylesheet" href="estilos.css"-->
     </head>
     <body>
-        <a href="index.html">lm</a>
+        <a href="lm">lm</a>
     </body>
 </html>
