--- a/lm/index.html
+++ b/lm/index.html
@@ -6,6 +6,6 @@
     	<meta charset="utf-8">
 	</head>
 <body>
-<a href="cordobapatrimonio/index.html"></a>
+<a href="cordobapatrimonio/index.html">Ciudad-Patrimonio</a>
 </body>
 </html>
