--- a/lm/index.html
+++ b/lm/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
     
-    <head>
+<head>
     	<title>Pagína Inicio</title>
     	<meta charset="utf-8">
-	</head>
+</head>
 <body>
-<a href="cordobapatrimonio/index.html">Ciudad-Patrimonio</a>
+	<a href="cordobapatrimonio/index.html">Ciudad-Patrimonio</a>
+	<p>hola</p>
 </body>
 </html>
