--- a/lm/cordobapatrimonio/index.html
+++ b/lm/cordobapatrimonio/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <title>Turismo Córdoba</title>
         <meta charset="utf-8">
+        <title>Turismo Córdoba</title>
         <meta name="description" content="Cordoba ciudad de patrimonio">
         <meta name="keywords" content="Turismo, patrimonio, viajes">
         <!--link rel="stylesheet" href="estilos.css"-->
@@ -11,16 +11,20 @@
         <header>
             <h1>Córdoba Ciudad de patrimonio</h1>
         </header>
-        <nav>>
+        <nav>
             <a href="index.html">Inicio</a> |
             <a href="mezquita.html">La Mezquita</a> |
             <a href="cascohistorico.html">Casco Histórico</a> |
             <a href="patios.html">Los Patios</a> |
-            <a href="medinaazhara.html">Medina Azahara</a> |
-            <a href="contacto.html">Contacto</a> |
+            <a href="medinaazahara.html">Medina Azahara</a> |
+            <a href="recetas.html">Las recetas de la abuela</a> |
+            <a href="recorrido.html">Recorrido-Histórico</a> |
+            <a href="contacto.html">Contacto</a> 
         </nav>
         <main>
             <section>
+                <br>
+                <img src="img/mezquita.jpg">    
                 <article>
                 <h2>
                     Noticia 1
@@ -44,12 +48,8 @@
                     Contenido noticia 2
                 </article>
             </section>
-            <aside>
-                <a href="documentos/planoA4.pdf" download="plano">Mapa de la ciudad</a>
-            </aside>
         </main>
         <footer>
-            <address>Córdoba Spain</address>
            &copy; Todos los derechos ...
         </footer>
     </body>
