--- a/lm/cordobapatrimonio/medinaazahara.html
+++ b/lm/cordobapatrimonio/medinaazahara.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<title>Mezquita de Córdoba</title>
+    <meta charset="utf-8">
+	<title>Medina Azahara</title>
+	<meta name="description" content="Cordoba ciudad de patrimonio">
+    <meta name="keywords" content="Turismo, patrimonio, viajes">
 </head>
 
 <body>
@@ -16,6 +19,6 @@
 
     </nav>
         <br>
-<img src="img/mezquita.jpg">
+<img src="img/medina.jpg">
 </body>
 </html>
