--- a/lm/cordobapatrimonio/patios.html
+++ b/lm/cordobapatrimonio/patios.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<title>Mezquita de Córdoba</title>
+    <meta charset="utf-8">
+	<title>Los Patios</title>
+    <meta name="description" content="Cordoba ciudad de patrimonio">
+    <meta name="keywords" content="Turismo, patrimonio, viajes">
 </head>
 
 <body>
@@ -15,7 +18,7 @@
 		<a href="contacto.html">Contacto</a> 
 
     </nav>
-        <br>
-<img src="img/mezquita.jpg">
+    <br>
+<img src="img/patios.jpg">
 </body>
 </html>
