--- a/lm/cordobapatrimonio/recorrido.html
+++ b/lm/cordobapatrimonio/recorrido.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<title>Mezquita de Córdoba</title>
+    <meta charset="utf-8">
+	<title>Recorrido-Histórico</title>
+	<meta name="description" content="Cordoba ciudad de patrimonio">
+    <meta name="keywords" content="Turismo, patrimonio, viajes">
 </head>
 
 <body>
@@ -16,6 +19,14 @@
 
     </nav>
         <br>
+<h1>Recorrido-Histórico</h1>
+<p><b>1. La Mezquita</b></p>
 <img src="img/mezquita.jpg">
+<p><b>2. Casco Histórico</b></p>
+<img src="img/casco.jpg">
+<p><b>3. Los patios</b></p>
+<img src="img/patios.jpg">
+<p><b>4. Medina Azahara</b></p>
+<img src="img/medina.jpg">
 </body>
 </html>
