--- a/index.html
+++ b/index.html
@@ -1,31 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
     
-    <head>
-    	<title>Lenguaje de marcas</title>
+<head>
+    	<title>Pagína Inicio</title>
     	<meta charset="utf-8">
-	</head>
+</head>
 <body>
-	
-		<a href="cordobapatrimonio/index.html" target="_blank">Ciudad Patrimonio</a>
-	
-<h2>Tema 1</h2>
-	<ul>
-		<li><a href="tema1/actividad3.html" target="_blank">Act-Documento Formato Gift</a></li>
-	</ul>
-
-<h2>Tema 2</h2>
-<ul>
-	<li><a href="tema2/http.pdf" target="_blank">Act-Probando HTTP</a></li>
-	<li><a href="tema2/cuestionario.pdf" target="_blank">Act-Cuestionario</a></li>
-</ul>
-<h2>Tema 3</h2>
-<ul>
-	<li><a href="tema3/enlaces.pdf" target="_blank">Act-Enlances</a></li>
-	<li><a href="tema3/imagenes.pdf" target="_blank">Act-Imágenes</a> | <a href="tema3/sistemasolar.html" target="_blank">Sistema Solar</a></li>
-	<li><a href="tema3/listas.pdf" target="_blank">Act-Listas</a></li>
-	<li><a href="tema3/tablas.html" target="_blank">Act-Tablas</a></li>
-	<li><a href="tema3/formularios.pdf" target="_blank">Act-Formularios</a></li>
-</ul>
+	<h1>Web de Javier Salazar<
+	<a href="lm/index.html">lenguaje de marcas</a>
 </body>
 </html>
