--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     	<meta charset="utf-8">
 </head>
 <body>
-	<h1>Web de Javier Salazar<
-	<a href="lm/index.html">lenguaje de marcas</a>
+	<h1>Web de Javier Salazar</h1>
+	<a href="lm/index.html">Lenguaje de marcas</a>
 </body>
 </html>
