--- a/lm/index.html
+++ b/lm/index.html
@@ -7,25 +7,25 @@
 	</head>
 <body>
 	
-		<a href="lm/cordobapatrimonio/index.html" target="_blank">Ciudad Patrimonio</a>
+		<a href="cordobapatrimonio/index.html" target="_blank">Ciudad Patrimonio</a>
 	
 <h2>Tema 1</h2>
 	<ul>
-		<li><a href="lm/tema1/actividad3.html" target="_blank">Act-Documento Formato Gift</a></li>
+		<li><a href="tema1/actividad3.html" target="_blank">Act-Documento Formato Gift</a></li>
 	</ul>
 
 <h2>Tema 2</h2>
 <ul>
-	<li><a href="lm/tema2/http.pdf" target="_blank">Act-Probando HTTP</a></li>
-	<li><a href="lm/tema2/cuestionario.pdf" target="_blank">Act-Cuestionario</a></li>
+	<li><a href="tema2/http.pdf" target="_blank">Act-Probando HTTP</a></li>
+	<li><a href="tema2/cuestionario.pdf" target="_blank">Act-Cuestionario</a></li>
 </ul>
 <h2>Tema 3</h2>
 <ul>
-	<li><a href="lm/tema3/enlaces.pdf" target="_blank">Act-Enlances</a></li>
-	<li><a href="lm/tema3/imagenes.pdf" target="_blank">Act-Imágenes</a> | <a href="lm/tema3/sistemasolar.html" target="_blank">Sistema Solar</a></li>
-	<li><a href="lm/tema3/listas.pdf" target="_blank">Act-Listas</a></li>
-	<li><a href="lm/tema3/tablas.html" target="_blank">Act-Tablas</a></li>
-	<li><a href="lm/tema3/formularios.pdf" target="_blank">Act-Formularios</a></li>
+	<li><a href="tema3/enlaces.pdf" target="_blank">Act-Enlances</a></li>
+	<li><a href="tema3/imagenes.pdf" target="_blank">Act-Imágenes</a> | <a href="lm/tema3/sistemasolar.html" target="_blank">Sistema Solar</a></li>
+	<li><a href="tema3/listas.pdf" target="_blank">Act-Listas</a></li>
+	<li><a href="tema3/tablas.html" target="_blank">Act-Tablas</a></li>
+	<li><a href="tema3/formularios.pdf" target="_blank">Act-Formularios</a></li>
 </ul>
 </body>
 </html>
