--- a/lm/index.html
+++ b/lm/index.html
@@ -22,7 +22,7 @@
 <h2>Tema 3</h2>
 <ul>
 	<li><a href="tema3/enlaces.pdf" target="_blank">Act-Enlances</a></li>
-	<li><a href="tema3/imagenes.pdf" target="_blank">Act-Imágenes</a> | <a href="lm/tema3/sistemasolar.html" target="_blank">Sistema Solar</a></li>
+	<li><a href="tema3/imagenes.pdf" target="_blank">Act-Imágenes</a> | <a href="tema3/sistemasolar.html" target="_blank">Sistema Solar</a></li>
 	<li><a href="tema3/listas.pdf" target="_blank">Act-Listas</a></li>
 	<li><a href="tema3/tablas.html" target="_blank">Act-Tablas</a></li>
 	<li><a href="tema3/formularios.pdf" target="_blank">Act-Formularios</a></li>
