--- a/lm/index.html
+++ b/lm/index.html
@@ -6,6 +6,9 @@
     	<meta charset="utf-8">
 	</head>
 <body>
+	<nav>
+	<a type="application/rss+xml" href="rssweb.rss">RSS</a>
+	</nav>
 	
 		<a href="cordobapatrimonio/index.html" target="_blank">Ciudad Patrimonio</a>
 	
