--- a/lm/index.html
+++ b/lm/index.html
@@ -30,5 +30,31 @@
 	<li><a href="tema3/tablas.html" target="_blank">Act-Tablas</a></li>
 	<li><a href="tema3/formularios.pdf" target="_blank">Act-Formularios</a></li>
 </ul>
+	
+<h2>Tema 4</h2>
+<ul>
+	<li><a href="tema4/a2.html" target="_blank">U4_bloque2</a></li>
+	<li><a href="tema4/a3.html" target="_blank">U4_bloque3</a>
+	<li><a href="tema4/a4.html" target="_blank">U4_bloque4</a></li>
+	<li><a href="tema4/a6.html" target="_blank">U4_bloque6</a></li>
+	<li><a href="tema4/a9.html" target="_blank">U4_bloque9</a></li>
+</ul>
+	
+<h2>Tema 6</h2>
+<ul>
+	<li><a href="tema6/ejer1.xhtml" target="_blank">U6_Ejercicio1</a></li>
+	<li><a href="tema6/ejer2.xhtml" target="_blank">U6_Ejercicio2</a>
+	<li><a href="tema6/ejer3.xhtml" target="_blank">U6_Ejercicio3</a></li>
+	<li><a href="tema6/ejer4.xhtml" target="_blank">U6_Ejercicio4</a></li>
+</ul>
+	
+<h2>Tema 7</h2>
+	<ul>
+	<li><a href="tema7/enlaces.pdf" target="_blank">Act-Enlances</a></li>
+	<li><a href="tema7/imagenes.pdf" target="_blank">Act-Imágenes</a> | <a href="tema3/sistemasolar.html" target="_blank">Sistema Solar</a></li>
+	<li><a href="tema7/listas.pdf" target="_blank">Act-Listas</a></li>
+	<li><a href="tema7/tablas.html" target="_blank">Act-Tablas</a></li>
+	<li><a href="tema7/formularios.pdf" target="_blank">Act-Formularios</a></li>
+</ul>
 </body>
 </html>
