--- a/lm/index.html
+++ b/lm/index.html
@@ -50,11 +50,22 @@
 	
 <h2>Tema 7</h2>
 	<ul>
-	<li><a href="tema7/enlaces.pdf" target="_blank">Act-Enlances</a></li>
-	<li><a href="tema7/imagenes.pdf" target="_blank">Act-Imágenes</a> | <a href="tema3/sistemasolar.html" target="_blank">Sistema Solar</a></li>
-	<li><a href="tema7/listas.pdf" target="_blank">Act-Listas</a></li>
-	<li><a href="tema7/tablas.html" target="_blank">Act-Tablas</a></li>
-	<li><a href="tema7/formularios.pdf" target="_blank">Act-Formularios</a></li>
+	<li><a href="tema7/1.xml" target="_blank"></a>Ejercicio dtd 1</li>
+	<li><a href="tema7/act1.xml" target="_blank">Ejercicio dtd 2</a></li>
+	<li><a href="tema7/act2.xml" target="_blank">Ejercicio dtd 3</a></li>
+	<li><a href="tema7/deportista.xml" target="_blank">Ejercicio deportista dtd</a></li>
+	<li><a href="tema7/act2.xml" target="_blank">Ejercicio xsd 1</a></li>
+	<li><a href="tema7/act3.xml" target="_blank">Ejercicio xsd 2</a></li>
+	<li><a href="tema7/act4.xml" target="_blank">Ejercicio xsd 3</a></li>
+	<li><a href="tema7/act5.xml" target="_blank">Ejercicio xsd 4</a></li>
+	<li><a href="tema7/act5.xml" target="_blank">Ejercicio xsd 5</a></li>
+	<li><a href="tema7/act8.xml" target="_blank">Ejercicio xsd 6</a></li>
+	<li><a href="tema7/act9.xml" target="_blank">Ejercicio xsd 7</a></li>
+	<li><a href="tema7/act10.xml" target="_blank">Ejercicio xsd 8</a></li>
+	<li><a href="tema7/pr2.xml" target="_blank">Ejercicio xsd clase</a></li>
+	<li><a href="tema7/pruebaatt.xml" target="_blank">Ejercicio xsd clase</a></li>
+	<li><a href="tema7/pruebaxsd.xml" target="_blank">Ejercicio xsd clase</a></li>
+	<li><a href="tema7/pruebas.xml" target="_blank">Ejercicio xsd clase</a></li>
 </ul>
 </body>
 </html>
