--- a/lm/index.html
+++ b/lm/index.html
@@ -50,7 +50,7 @@
 	
 <h2>Tema 7</h2>
 	<ul>
-	<li><a href="tema7/1.xml" target="_blank"></a>Ejercicio dtd 1</li>
+	<li><a href="tema7/1.xml" target="_blank">Ejercicio dtd 1</a></li>
 	<li><a href="tema7/act1.xml" target="_blank">Ejercicio dtd 2</a></li>
 	<li><a href="tema7/act2.xml" target="_blank">Ejercicio dtd 3</a></li>
 	<li><a href="tema7/deportista.xml" target="_blank">Ejercicio deportista dtd</a></li>
