--- a/lm/index.html
+++ b/lm/index.html
@@ -64,7 +64,7 @@
 	<li><a href="tema7/pr2.xml" target="_blank">Ejercicio xsd clase</a> | <a href="tema7/pr2.xsd" target="_blank">XSD Ejercicio clase</a></li>
 	<li><a href="tema7/pruebaatt.xml" target="_blank">Ejercicio xsd clase</a> | <a href="tema7/pruebaatt.xsd" target="_blank">XSD Ejercicio clase</a></li>
 	<li><a href="tema7/pruebaxsd.xml" target="_blank">Ejercicio xsd clase</a> | <a href="tema7/pruebaxsd.xsd" target="_blank">XSD Ejercicio clase</a></li>
-	<li><a href="tema7/pruebas.xml" target="_blank">Ejercicio xsd clase</a> | <a href="tema7/pruebas.xsd" target="_blank">XSD Ejercicio clase</a></li>
+	<li><a href="tema7/pruebas.xml" target="_blank">Ejercicio xsd clase</a></li>
 </ul>
 </body>
 </html>
