--- a/lm/cordobapatrimonio/cascohistorico.html
+++ b/lm/cordobapatrimonio/cascohistorico.html
@@ -2,23 +2,30 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
+    <link href="css/global.css" rel="stylesheet">    
 	<title>Casco Histórico</title>
 	<meta name="description" content="Cordoba ciudad de patrimonio">
     <meta name="keywords" content="Turismo, patrimonio, viajes">
 </head>
 
 <body>
-	<nav> 
-	    <a href="index.html">Inicio</a> |
-	    <a href="mezquita.html">La Mezquita</a> |
-	    <a href="cascohistorico.html">Casco Histórico</a> |
-	    <a href="patios.html">Los Patios</a> |
-	    <a href="medinaazahara.html">Medina Azahara</a> |
-	    <a href="recorrido.html">Recorrido-Histórico</a> |
-		<a href="contacto.html">Contacto</a> 
-
-    </nav>
+	<ul>
+	    <li><a href="index.html">Inicio</a></li>
+	    <li><a href="mezquita.html">La Mezquita</a></li>
+	    <li><a class="active" href="cascohistorico.html">Casco Histórico</a></li>
+	    <li><a href="patios.html">Los Patios</a></li>
+	    <li><a href="medinaazahara.html">Medina Azahara</a></li>
+	    <li><a href="recorrido.html">Recorrido-Histórico</a></li>
+		<li><a href="contacto.html">Contacto</a></li>
+    </ul>
         <br>
 <img src="img/casco.jpg">
+<p>El centro histórico de Córdoba es uno de los cascos antiguos más grandes de Europa. En 1984, la Unesco declaró a la mezquita-catedral de Córdoba como Patrimonio de la Humanidad. Más tarde, en 1994, la Unesco expandió esta denominación a gran parte del casco antiguo.​ El centro histórico posee una gran riqueza monumental conservando grandes vestigios de la época romana, árabe y cristiana.<br>
+
+
+</br>Los elementos de borde que definen la delimitación del conjunto histórico de Córdoba están formados por las vías de comunicación que coinciden con la antigua muralla, lo que en gran medida ha salvaguardado el centro histórico de los ensanches urbanísticos de finales del siglo XIX y principios del XX, pues estos transcurren por el perímetro del mismo, creándose así un anillo de espacios libres que protege al Conjunto Histórico de Córdoba. </p>
+   <footer>
+           &copy; Todos los derechos ...
+        </footer>
 </body>
 </html>
