--- a/lm/cordobapatrimonio/contacto.html
+++ b/lm/cordobapatrimonio/contacto.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Córdoba</title>
+        <link href="css/global.css" rel="stylesheet">
         <meta name="description" content="Cordoba ciudad de patrimonio">
         <meta name="keywords" content="Turismo, patrimonio, viajes">
         <!--link rel="stylesheet" href="estilos.css"-->
@@ -12,16 +13,15 @@
             <h1>Córdoba Ciudad de patrimonio</h1>
         </header>
 
-        <nav> 
-            <a href="index.html">Inicio</a> |
-            <a href="mezquita.html">La Mezquita</a> |
-            <a href="cascohistorico.html">Casco Histórico</a> |
-            <a href="patios.html">Los Patios</a> |
-            <a href="medinaazahara.html">Medina Azahara</a> |
-            <a href="recorrido.html">Recorrido-Histórico</a> |
-            <a href="contacto.html">Contacto</a> 
-
-        </nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="mezquita.html">La Mezquita</a></li>
+            <li><a href="cascohistorico.html">Casco Histórico</a></li>
+            <li><a href="patios.html">Los Patios</a></li>
+            <li><a href="medinaazahara.html">Medina Azahara</a></li>
+            <li><a href="recorrido.html">Recorrido-Histórico</a></li>
+            <li><a class="active" href="contacto.html">Contacto</a></li>
+        </ul>
         <main>
             <section>    
                 <article>
