--- a/lm/cordobapatrimonio/index.html
+++ b/lm/cordobapatrimonio/index.html
@@ -3,23 +3,23 @@
     <head>
         <meta charset="utf-8">
         <title>Turismo Córdoba</title>
+        <link href="css/global.css" rel="stylesheet">
         <meta name="description" content="Cordoba ciudad de patrimonio">
         <meta name="keywords" content="Turismo, patrimonio, viajes">
-        <!--link rel="stylesheet" href="estilos.css"-->
     </head>
     <body>
         <header>
             <h1>Córdoba Ciudad de patrimonio</h1>
         </header>
-        <nav>
-            <a href="index.html">Inicio</a> |
-            <a href="mezquita.html">La Mezquita</a> |
-            <a href="cascohistorico.html">Casco Histórico</a> |
-            <a href="patios.html">Los Patios</a> |
-            <a href="medinaazahara.html">Medina Azahara</a> |
-            <a href="recorrido.html">Recorrido-Histórico</a> |
-            <a href="contacto.html">Contacto</a> 
-        </nav>
+    <ul>
+        <li><a class="active" href="index.html">Inicio</a></li>
+        <li><a href="mezquita.html">La Mezquita</a></li>
+        <li><a href="cascohistorico.html">Casco Histórico</a></li>
+        <li><a href="patios.html">Los Patios</a></li>
+        <li><a href="medinaazahara.html">Medina Azahara</a></li>
+        <li><a href="recorrido.html">Recorrido-Histórico</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+    </ul>
         <main>
             <section>
                 <br>
@@ -42,9 +42,6 @@
                     id mollis felis turpis in eros. Nam finibus lorem in elit viverra, vel consectetur lorem tempus. Etiam sagittis dolor porttitor sem iaculis lobortis. 
                     Donec ut suscipit metus.
                 </p>
-                </article>
-                <article>
-                    Contenido noticia 2
                 </article>
             </section>
         </main>
