--- a/lm/cordobapatrimonio/medinaazahara.html
+++ b/lm/cordobapatrimonio/medinaazahara.html
@@ -2,23 +2,36 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
+	<link href="css/global.css" rel="stylesheet">
 	<title>Medina Azahara</title>
 	<meta name="description" content="Cordoba ciudad de patrimonio">
     <meta name="keywords" content="Turismo, patrimonio, viajes">
+
 </head>
 
 <body>
-	<nav> 
-	    <a href="index.html">Inicio</a> |
-	    <a href="mezquita.html">La Mezquita</a> |
-	    <a href="cascohistorico.html">Casco Histórico</a> |
-	    <a href="patios.html">Los Patios</a> |
-	    <a href="medinaazahara.html">Medina Azahara</a> |
-	    <a href="recorrido.html">Recorrido-Histórico</a> |
-		<a href="contacto.html">Contacto</a> 
 
-    </nav>
+	<ul>
+	    <li><a href="index.html">Inicio</a></li>
+	    <li><a href="mezquita.html">La Mezquita</a></li>
+	    <li><a href="cascohistorico.html">Casco Histórico</a></li>
+	    <li><a href="patios.html">Los Patios</a></li>
+	    <li><a class="active" href="medinaazahara.html">Medina Azahara</a></li>
+	    <li><a href="recorrido.html">Recorrido-Histórico</a></li>
+		<li><a href="contacto.html">Contacto</a></li>
+    </ul>
         <br>
-<img src="img/medina.jpg">
+<img id="medina" src="img/medina.jpg">
+<br>
+
+</br>Medina Azahara, castellanización del nombre en árabe, مدينة الزهراء‎ Madīnat al-Zahrā ("la Ciudad Brillante"),2 fue una ciudad palatina o áulica que mandó edificar el primer califa de Córdoba, Abderramán III, a unos 8 km en las afueras de Córdoba en dirección noroeste, a los pies de Sierra Morena.<br>
+
+</br>Los principales motivos de su construcción son de índole político-ideológica: la dignidad de califa exige la fundación de una nueva ciudad, símbolo de su poder, a imitación de otros califatos orientales y sobre todo, para mostrar su superioridad sobre sus grandes enemigos, el recién instaurado Califato fatimí de Ifriqiya, la zona norte del continente africano. Además de oponentes políticos, lo eran también en lo religioso, ya que los fatimíes, chiíes, eran enemigos de los omeyas, mayoritariamente de la rama islámica suní.<br>
+
+
+</br>El yacimiento arqueológico de Medina Azahara está declarado Bien de interés cultural en la categoría de Monumento desde el año 1923,​ además de ser declarada oficialmente como Patrimonio de la Humanidad de la Unesco el 1 de julio de 2018.​ En 2019 recibió más de 285.672 visitantes, siendo uno de los espacios culturales más visitados de Andalucía.
+   <footer>
+           &copy; Todos los derechos ...
+        </footer>
 </body>
 </html>
