--- a/lm/cordobapatrimonio/mezquita.html
+++ b/lm/cordobapatrimonio/mezquita.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+    <link href="css/global.css" rel="stylesheet">
 	<title>Mezquita de Córdoba</title>
+	<meta name="description" content="Cordoba ciudad de patrimonio">
+    <meta name="keywords" content="Turismo, patrimonio, viajes">
 </head>
 
 <body>
-	<nav> 
-	    <a href="index.html">Inicio</a> |
-	    <a href="mezquita.html">La Mezquita</a> |
-	    <a href="cascohistorico.html">Casco Histórico</a> |
-	    <a href="patios.html">Los Patios</a> |
-	    <a href="medinaazahara.html">Medina Azahara</a> |
-	    <a href="recorrido.html">Recorrido-Histórico</a> |
-		<a href="contacto.html">Contacto</a> 
-
-    </nav>
+	<ul>
+	    <li><a href="index.html">Inicio</a></li>
+	    <li><a class="active" href="mezquita.html">La Mezquita</a></li>
+	    <li><a href="cascohistorico.html">Casco Histórico</a></li>
+	    <li><a href="patios.html">Los Patios</a></li>
+	    <li><a href="medinaazahara.html">Medina Azahara</a></li>
+	    <li><a href="recorrido.html">Recorrido-Histórico</a></li>
+		<li><a href="contacto.html">Contacto</a></li>
+    </ul>
         <br>
+
+        <h1>La mezquita</h1>
 <img src="img/mezquita.jpg">
+
+<p><br>
+Es un edificio de la ciudad de Córdoba, España. En 2019 superó los dos millones de visitantes, siendo su récord histórico y convirtiéndolo en uno de los monumentos más visitados de España.
+<br>
+
+</br>Se empezó a construir como mezquita en el año 784; hasta hace poco se creía que tras la apropiación por los conquistadores musulmanes de la basílica hispanorromana de San Vicente Mártir y la reutilización de parte de los materiales, quedando reservada al culto musulmán, pero los estudios arqueológicos más recientes descartan esta hipótesis.​ El edificio fue objeto de ampliaciones durante el Emirato de Córdoba y el Califato de Córdoba. Con 23 400 metros cuadrados, fue la segunda mezquita más grande del mundo en superficie, por detrás de la Mezquita de La Meca, siendo superada posteriormente por la Mezquita Azul (Estambul, 1588). El muro de la qibla no fue orientado hacia La Meca, sino 51º grados hacia el sur; esto era habitual en las mezquitas de al-Ándalus.
+<br>
+
+</br>En 1238, tras la Reconquista cristiana de la ciudad, se llevó a cabo su consagración como catedral de la diócesis con la Ordenación episcopal de su primer obispo, Lope de Fitero.​ El edificio alberga el cabildo catedralicio de la Diócesis de Córdoba, y por su carácter de templo católico y sede episcopal, está reservado al culto católico. En 1523, bajo la dirección de los arquitectos Hernán Ruiz, el Viejo y su hijo, se construyó su basílica cruciforme renacentista de estilo plateresco.
+<br>
+
+</br>Hoy todo el conjunto constituye el monumento más importante de Córdoba, y también de toda la arquitectura andalusí, junto con la Alhambra, así como el más emblemático del arte omeya hispanomusulmán. Declarada como Bien de interés cultural y Patrimonio Cultural de la Humanidad como parte del centro histórico de la ciudad,​ se incluyó por el público entre los 12 Tesoros de España en 2007​ y fue premiada como el mejor sitio de interés turístico de Europa y sexto del mundo según un concurso de TripAdvisor.
+</p>
+   <footer>
+           &copy; Todos los derechos ...
+        </footer>
 </body>
 </html>
