--- a/lm/cordobapatrimonio/recorrido.html
+++ b/lm/cordobapatrimonio/recorrido.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="utf-8">
 	<title>Recorrido-Histórico</title>
+	<link href="css/global.css" rel="stylesheet">
 	<meta name="description" content="Cordoba ciudad de patrimonio">
     <meta name="keywords" content="Turismo, patrimonio, viajes">
 </head>
 
-<body>
-	<nav> 
-	    <a href="index.html">Inicio</a> |
-	    <a href="mezquita.html">La Mezquita</a> |
-	    <a href="cascohistorico.html">Casco Histórico</a> |
-	    <a href="patios.html">Los Patios</a> |
-	    <a href="medinaazahara.html">Medina Azahara</a> |
-	    <a href="recorrido.html">Recorrido-Histórico</a> |
-		<a href="contacto.html">Contacto</a> 
-
-    </nav>
-        <br>
+<body>   
+	
+	<ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="mezquita.html">La Mezquita</a></li>
+        <li><a href="cascohistorico.html">Casco Histórico</a></li>
+        <li><a href="patios.html">Los Patios</a></li>
+        <li><a href="medinaazahara.html">Medina Azahara</a></li>
+        <li><a class="active" href="recorrido.html">Recorrido-Histórico</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+    </ul>
+    <br>
 <h1>Recorrido-Histórico</h1>
 <p><b>1. La Mezquita</b></p>
 <img src="img/mezquita.jpg">
@@ -28,5 +29,8 @@
 <img src="img/patios.jpg">
 <p><b>4. Medina Azahara</b></p>
 <img src="img/medina.jpg">
+   <footer>
+           &copy; Todos los derechos ...
+        </footer>
 </body>
 </html>
