--- a/lm/cordobapatrimonio/patios.html
+++ b/lm/cordobapatrimonio/patios.html
@@ -2,23 +2,30 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
+    <link href="css/global.css" rel="stylesheet">
 	<title>Los Patios</title>
     <meta name="description" content="Cordoba ciudad de patrimonio">
     <meta name="keywords" content="Turismo, patrimonio, viajes">
 </head>
 
 <body>
-	<nav> 
-	    <a href="index.html">Inicio</a> |
-	    <a href="mezquita.html">La Mezquita</a> |
-	    <a href="cascohistorico.html">Casco Histórico</a> |
-	    <a href="patios.html">Los Patios</a> |
-	    <a href="medinaazahara.html">Medina Azahara</a> |
-	    <a href="recorrido.html">Recorrido-Histórico</a> |
-		<a href="contacto.html">Contacto</a> 
-
-    </nav>
+	<ul>
+	    <li><a href="index.html">Inicio</a></li>
+	    <li><a href="mezquita.html">La Mezquita</a></li>
+	    <li><a href="cascohistorico.html">Casco Histórico</a></li>
+	    <li><a class="active" href="patios.html">Los Patios</a></li>
+	    <li><a href="medinaazahara.html">Medina Azahara</a></li>
+	    <li><a href="recorrido.html">Recorrido-Histórico</a></li>
+		<li><a href="contacto.html">Contacto</a></li>
+    </ul>
     <br>
 <img src="img/patios.jpg">
+<p>El Festival de los Patios Cordobeses es un concurso de patios de Córdoba (España) celebrado, generalmente, durante la segunda y tercera semana del mes de mayo. Los participantes decoran y abren sus patios gratuitamente para que puedan ser visitados dentro del horario establecido para tal fin. En los últimos años, los patios en concursos se señalan con macetas de setos que se colocan flanqueando las puertas, de modo que puedan ser identificados de manera clara.<br>
+
+
+</br>A fin de incentivar el festival y conservar la arquitectura típica de la ciudad, se admiten a concurso patios de reciente construcción, estableciéndose dos categoría: arquitectura antigua y arquitectura moderna. En los últimos años, hasta 50 patios han participado en el certamen. Además, el festival se completa con un programa educativo organizado por el Ayuntamiento de Córdoba cuyo objetivo es dar a conocer a los estudiantes la arquitectura y el patrimonio, así como promover el respecto por el mismo. </p>
+   <footer>
+           &copy; Todos los derechos ...
+        </footer>
 </body>
 </html>
