--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     
 <head>
     	<title>Pagína Inicio</title>
+	<link href="css/index.css" rel="stylesheet">
+
     	<meta charset="utf-8">
 </head>
 <body>
