--- a/lm/index.html
+++ b/lm/index.html
@@ -3,6 +3,8 @@
     
     <head>
     	<title>Lenguaje de marcas</title>
+	<link href="css/index.css" rel="stylesheet">
+
     	<meta charset="utf-8">
 	</head>
 <body>
