--- a/lm/index.html
+++ b/lm/index.html
@@ -13,6 +13,7 @@
 	</nav>
 	
 		<a href="cordobapatrimonio/index.html" target="_blank">Ciudad Patrimonio</a>
+		<a href="recetasdelaabuela/carne.html" target="_blank">Recetas de la abuela</a>
 	
 <h2>Tema 1</h2>
 	<ul>
