--- a/lm/recetasdelaabuela/carne.html
+++ b/lm/recetasdelaabuela/carne.html
@@ -113,7 +113,7 @@
   <!-- Content section -->
   <section class="py-5">
     <div class="container">
-      <div class="py-5 imgport" style="background-image: url('file:///C:/Users/USUARIO/Desktop/JAVIER/bootstrap/startbootstrap-full-width-pics-gh-pages/brocheta.jpg');"><h1 class="h">Recetas de la abuela</h1></div><br>
+      <div class="py-5 imgport" style="background-image: url('brocheta.jpg');"><h1 class="h">Recetas de la abuela</h1></div><br>
       <h1>Brochetas de presa ibérica con champiñón Portobello</h1>
       <p class="lead">Para estas brochetas nos hemos decantado por dos productos únicos como es la presa ibérica y los champiñones Portobello.</p>
 
