--- a/lm/index.html
+++ b/lm/index.html
@@ -53,20 +53,20 @@
 	
 <h2>Tema 7</h2>
 	<ul>
-	<li><a href="tema7/1.xml" target="_blank">Ejercicio 1 xml </a>  <a href="tema7/1.dtd" target="_blank">DTD Ejercicio 1</a></li>
+	<li><a href="tema7/1.xml" target="_blank">Ejercicio 1 xml </a><a href="tema7/1.dtd" target="_blank">DTD Ejercicio 1</a></li>
 	<li><a href="tema7/act1.xml" target="_blank">Ejercicio 2 xml</a>
-	<li><a href="tema7/act2.xml" target="_blank">Ejercicio 3 xml</a> <a href="tema7/act2.dtd" target="_blank"> DTD Ejercicio 3</a></li>
-	<li><a href="tema7/deportista.xml" target="_blank">Ejercicio deportista xml</a> | <a href="tema7/deportista.dtd" target="_blank">DTD Ejercicio deportista</a></li>
-	<li><a href="tema7/act2.xml" target="_blank">Ejercicio xsd 1</a> <a href="tema7/act2.xsd" target="_blank">XSD Ejercicio 1</a></li>
+	<li><a href="tema7/act2.xml" target="_blank">Ejercicio 3 xml</a><a href="tema7/act2.dtd" target="_blank"> DTD Ejercicio 3</a></li>
+	<li><a href="tema7/deportista.xml" target="_blank">Ejercicio deportista xml</a><a href="tema7/deportista.dtd" target="_blank">DTD Ejercicio deportista</a></li>
+	<li><a href="tema7/act2.xml" target="_blank">Ejercicio xsd 1</a><a href="tema7/act2.xsd" target="_blank">XSD Ejercicio 1</a></li>
 	<li><a href="tema7/act3.xml" target="_blank">Ejercicio xsd 2</a>
-	<li><a href="tema7/act4.xml" target="_blank">Ejercicio xsd 3</a> <a href="tema7/act4.xsd" target="_blank">XSD Ejercicio 3</a></li>
+	<li><a href="tema7/act4.xml" target="_blank">Ejercicio xsd 3</a><a href="tema7/act4.xsd" target="_blank">XSD Ejercicio 3</a></li>
 	<li><a href="tema7/act5.xml" target="_blank">Ejercicio xsd 5</a> 
-	<li><a href="tema7/act8.xml" target="_blank">Ejercicio xsd 6</a> <a href="tema7/act8.xsd" target="_blank">XSD Ejercicio 6</a></li>
-	<li><a href="tema7/act9.xml" target="_blank">Ejercicio xsd 7</a> <a href="tema7/act9.xsd" target="_blank">XSD Ejercicio 7</a></li>
-	<li><a href="tema7/act10.xml" target="_blank">Ejercicio xsd 8</a> <a href="tema7/act10.xsd" target="_blank">XSD Ejercicio 8</a></li>
-	<li><a href="tema7/pr2.xml" target="_blank">Ejercicio xsd clase</a> <a href="tema7/pr2.xsd" target="_blank">XSD Ejercicio clase</a></li>
-	<li><a href="tema7/pruebaatt.xml" target="_blank">Ejercicio xsd clase</a> <a href="tema7/pruebaatt.xsd" target="_blank">XSD Ejercicio clase</a></li>
-	<li><a href="tema7/pruebaxsd.xml" target="_blank">Ejercicio xsd clase</a> <a href="tema7/pruebaxsd.xsd" target="_blank">XSD Ejercicio clase</a></li>
+	<li><a href="tema7/act8.xml" target="_blank">Ejercicio xsd 6</a><a href="tema7/act8.xsd" target="_blank">XSD Ejercicio 6</a></li>
+	<li><a href="tema7/act9.xml" target="_blank">Ejercicio xsd 7</a><a href="tema7/act9.xsd" target="_blank">XSD Ejercicio 7</a></li>
+	<li><a href="tema7/act10.xml" target="_blank">Ejercicio xsd 8</a><a href="tema7/act10.xsd" target="_blank">XSD Ejercicio 8</a></li>
+	<li><a href="tema7/pr2.xml" target="_blank">Ejercicio xsd clase</a><a href="tema7/pr2.xsd" target="_blank">XSD Ejercicio clase</a></li>
+	<li><a href="tema7/pruebaatt.xml" target="_blank">Ejercicio xsd clase</a><a href="tema7/pruebaatt.xsd" target="_blank">XSD Ejercicio clase</a></li>
+	<li><a href="tema7/pruebaxsd.xml" target="_blank">Ejercicio xsd clase</a><a href="tema7/pruebaxsd.xsd" target="_blank">XSD Ejercicio clase</a></li>
 	<li><a href="tema7/pruebas.xml" target="_blank">Ejercicio xsd clase</a></li>
 </ul>
 </body>
