--- a/lm/index.html
+++ b/lm/index.html
@@ -9,20 +9,21 @@
 	</head>
 <body>
 	<nav>
+	<a href="cordobapatrimonio/index.html" target="_blank">Ciudad Patrimonio</a>
+	<a href="recetasdelaabuela/carne.html" target="_blank">Recetas de la abuela</a>
 	<a type="application/rss+xml" href="rssweb.rss">RSS</a>
 	</nav>
 	
-		<a href="cordobapatrimonio/index.html" target="_blank">Ciudad Patrimonio</a>
-		<a href="recetasdelaabuela/carne.html" target="_blank">Recetas de la abuela</a>
+		
 	
 <h2>Tema 1</h2>
 	<ul>
-		<li><a href="tema1/actividad3.html" target="_blank">Act-Documento Formato Gift</a></li>
+		<li><a href="tema1/actividad3.html" target="_blank">Act-Gift</a></li>
 	</ul>
 
 <h2>Tema 2</h2>
 <ul>
-	<li><a href="tema2/http.pdf" target="_blank">Act-Probando HTTP</a></li>
+	<li><a href="tema2/http.pdf" target="_blank">Act-HTTP</a></li>
 	<li><a href="tema2/cuestionario.pdf" target="_blank">Act-Cuestionario</a></li>
 </ul>
 <h2>Tema 3</h2>
@@ -56,7 +57,7 @@
 	<li><a href="tema7/1.xml" target="_blank">Ejercicio 1 xml </a><a href="tema7/1.dtd" target="_blank">DTD Ejercicio 1</a></li>
 	<li><a href="tema7/act1.xml" target="_blank">Ejercicio 2 xml</a>
 	<li><a href="tema7/act2.xml" target="_blank">Ejercicio 3 xml</a><a href="tema7/act2.dtd" target="_blank"> DTD Ejercicio 3</a></li>
-	<li><a href="tema7/deportista.xml" target="_blank">Ejercicio deportista xml</a><a href="tema7/deportista.dtd" target="_blank">DTD Ejercicio deportista</a></li>
+	<li><a href="tema7/deportista.xml" target="_blank">Ejerciciodeportista </a><a href="tema7/deportista.dtd" target="_blank">DTD deportista</a></li>
 	<li><a href="tema7/act2.xml" target="_blank">Ejercicio xsd 1</a><a href="tema7/act2.xsd" target="_blank">XSD Ejercicio 1</a></li>
 	<li><a href="tema7/act3.xml" target="_blank">Ejercicio xsd 2</a>
 	<li><a href="tema7/act4.xml" target="_blank">Ejercicio xsd 3</a><a href="tema7/act4.xsd" target="_blank">XSD Ejercicio 3</a></li>
