--- a/lm/cordobapatrimonio/index.html
+++ b/lm/cordobapatrimonio/index.html
@@ -26,21 +26,14 @@
                 <img src="img/mezquita.jpg">    
                 <article>
                 <h2>
-                    Noticia 1
+                    Córdoba
                 </h2>
                 <p>
-                    <cite>Lorem ipsum dolor sit amet,</cite> consectetur adipiscing elit. Donec tempor egestas venenatis. Curabitur a magna eros. Sed dapibus feugiat
-                    lorem, quis ullamcorper mi pulvinar vitae. Sed egestas metus nulla. In ac tortor lobortis, sodales magna id, ultrices orci. 
-                    Nunc sed felis diam. turpis mauris, bibendum quis interdum at, iaculis ut lectus. In sed nulla blandit nisl euismod dignissim. 
-                    Vivamus aliquet maximus eros, in pulvinar nunc rhoncus eu. Donec elit libero, ultricies id tristique nec, interdum sit amet neque. Mauris 
-                    eu purus in est condimentum congue.
+                    <cite>Córdoba es una ciudad y municipio español en Andalucía, capital de la provincia homónima, situada en una depresión a orillas del Guadalquivir y al pie de Sierra Morena.Fundada por los romanos durante el siglo II a. C., llegaría a ser capital de la Hispania Ulterior en tiempos de la República romana, además de la provincia Bética durante el Imperio romano. No obstante, su momento álgido trascurrirá durante la dominación musulmana de la península ibérica, cuando se alzará como capital del Emirato de Córdoba, mientras que durante el Califato de Córdoba se convirtió en la ciudad más habitada, culta y opulenta de Europa y un centro líder mundial de la educación.
                 </p>
                 <p> 
-                    Ut eleifend nulla lorem, ac vulputate risus pharetra at. Ut at suscipit tellus, faucibus hendrerit erat. Proin vel consectetur felis. Pellentesque 
-                    eu efficitur libero, non porttitor enim. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus ut mi nibh.
-                     Morbi posuere velit quis quam tincidunt, a consectetur ligula posuere. Vivamus cursus, eros a pretium aliquam, risus arcu dictum ipsum, 
-                    id mollis felis turpis in eros. Nam finibus lorem in elit viverra, vel consectetur lorem tempus. Etiam sagittis dolor porttitor sem iaculis lobortis. 
-                    Donec ut suscipit metus.
+                   Durante la larga Edad Media europea, en Córdoba florecieron las letras y las ciencias, gestándose las bases del Renacimiento europeo. Abundaron las mezquitas, las bibliotecas, los baños y los zocos, además de contar con multitud de fuentes, iluminación pública y alcantarillado durante la época de mayor esplendor califal. 
+Córdoba es actualmente la ciudad que más títulos Patrimonio de la Humanidad de la Unesco alberga del mundo.
                 </p>
                 </article>
             </section>
