--- a/lm/cordobapatrimonio/index.html
+++ b/lm/cordobapatrimonio/index.html
@@ -25,11 +25,8 @@
                 <br>
                 <img src="img/mezquita.jpg">    
                 <article>
-                <h2>
-                    Córdoba
-                </h2>
                 <p>
-                    <cite>Córdoba es una ciudad y municipio español en Andalucía, capital de la provincia homónima, situada en una depresión a orillas del Guadalquivir y al pie de Sierra Morena.Fundada por los romanos durante el siglo II a. C., llegaría a ser capital de la Hispania Ulterior en tiempos de la República romana, además de la provincia Bética durante el Imperio romano. No obstante, su momento álgido trascurrirá durante la dominación musulmana de la península ibérica, cuando se alzará como capital del Emirato de Córdoba, mientras que durante el Califato de Córdoba se convirtió en la ciudad más habitada, culta y opulenta de Europa y un centro líder mundial de la educación.
+                    Córdoba es una ciudad y municipio español en Andalucía, capital de la provincia homónima, situada en una depresión a orillas del Guadalquivir y al pie de Sierra Morena.Fundada por los romanos durante el siglo II a. C., llegaría a ser capital de la Hispania Ulterior en tiempos de la República romana, además de la provincia Bética durante el Imperio romano. No obstante, su momento álgido trascurrirá durante la dominación musulmana de la península ibérica, cuando se alzará como capital del Emirato de Córdoba, mientras que durante el Califato de Córdoba se convirtió en la ciudad más habitada, culta y opulenta de Europa y un centro líder mundial de la educación.
                 </p>
                 <p> 
                    Durante la larga Edad Media europea, en Córdoba florecieron las letras y las ciencias, gestándose las bases del Renacimiento europeo. Abundaron las mezquitas, las bibliotecas, los baños y los zocos, además de contar con multitud de fuentes, iluminación pública y alcantarillado durante la época de mayor esplendor califal. 
