--- a/lm/cordobapatrimonio/index.html
+++ b/lm/cordobapatrimonio/index.html
@@ -31,7 +31,8 @@
                 <p> 
                    Durante la larga Edad Media europea, en Córdoba florecieron las letras y las ciencias, gestándose las bases del Renacimiento europeo. Abundaron las mezquitas, las bibliotecas, los baños y los zocos, además de contar con multitud de fuentes, iluminación pública y alcantarillado durante la época de mayor esplendor califal. 
 Córdoba es actualmente la ciudad que más títulos Patrimonio de la Humanidad de la Unesco alberga del mundo.
-                </p>
+En 1984, la Mezquita-catedral de Córdoba fue incluida en la reputada lista, declaración que una década más tarde se extendería a todo el casco histórico. La Fiesta de los Patios Cordobeses fue designada Patrimonio cultural inmaterial de la Humanidad en diciembre del 2012 y en julio de 2018 la ciudad palatina de Medina Azahara, en las afueras del núcleo urbano, fue declarada también Patrimonio de la Humanidad. Tiene además, uno de los cascos históricos más grandes de Europa, con 246'73 hectáreas con monumentos datados desde época romana.                
+                    </p>
                 </article>
             </section>
         </main>
