--- a/lm/index.html
+++ b/lm/index.html
@@ -4,14 +4,14 @@
     <head>
     	<title>Lenguaje de marcas</title>
 	<link href="css/index.css" rel="stylesheet">
-
+	<link rel="alternate" type="application/rss+xml" title="Canal RSS: Javier Salazar" href="rssweb.rss">
     	<meta charset="utf-8">
-	</head>
+    </head>
 <body>
 	<nav>
 	<a href="cordobapatrimonio/index.html" target="_blank">Ciudad Patrimonio</a>
 	<a href="recetasdelaabuela/carne.html" target="_blank">Recetas de la abuela</a>
-	<a type="application/rss+xml" href="rssweb.rss">RSS</a>
+	<a href="rssweb.rss">RSS</a>
 	</nav>
 	
 		
