--- a/lm/index.html
+++ b/lm/index.html
@@ -75,6 +75,7 @@
 <h2>Tema 9</h2>
 	<ul>
 		<li><a href="https://view.genial.ly/60a3795f345bfc0d106e3335/presentation-erp-javier-salazar-almagro" target="_blank">ERP</a></li>
+		<li><a href="tema8/odoo.pdf" target="_blank">Odoo</a></li>
 	</ul>	
 	</body>
 </html>
