--- a/lm/index.html
+++ b/lm/index.html
@@ -72,10 +72,16 @@
 	<li><a href="tema7/pruebas.xml" target="_blank">Ejercicio xsd clase</a></li>
 </ul>
 
+<h2>Tema 8</h2>
+	<ul>
+		<li><a href="tema8/" target="_blank">Ejercicio Xquery Libros</a></li>
+		<li><a href="tema8/odoo.pdf" target="_blank">Ejercicio Xquery Bailes</a></li>
+	</ul>		
+
 <h2>Tema 9</h2>
 	<ul>
 		<li><a href="https://view.genial.ly/60a3795f345bfc0d106e3335/presentation-erp-javier-salazar-almagro" target="_blank">ERP</a></li>
-		<li><a href="tema8/odoo.pdf" target="_blank">Odoo</a></li>
+		<li><a href="tema9/Odoo.pdf" target="_blank">Odoo</a></li>
 	</ul>	
 	</body>
 </html>
