--- a/lm/index.html
+++ b/lm/index.html
@@ -74,8 +74,8 @@
 
 <h2>Tema 8</h2>
 	<ul>
-		<li><a href="tema8/" target="_blank">Xquery Libros</a></li>
-		<li><a href="tema8/odoo.pdf" target="_blank">Xquery Bailes</a></li>
+		<li><a href="tema8/libros.xq" target="_blank">Xquery Libros</a></li>
+		<li><a href="tema8/bailes.xq" target="_blank">Xquery Bailes</a></li>
 	</ul>		
 
 <h2>Tema 9</h2>
